# Sentinel-Voice-Assistant

./: .env.example  .gitignore  ACTION_PLAN.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  abc.md  body.json  docker-compose.yml  implementation_plan.md  interactive_chat.py  pyproject.toml  requirements.txt  test_assistant.py
.github/workflows/: ci.yml
_assets/_docks/: etc.md  plan.md
_assets/_imp/: cursor_chat_message_display_issue.md
_assets/old_code/: langraph_rag_backend.py  streamlity_rag_frontend.py
backend/: Dockerfile  env_example.txt  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  graph.py  main.py  mcp.py
backend/app/agents/: __init__.py  plan_executor.py
backend/app/integrations/: __init__.py  gemini_client.py  groq_client.py  stt_client.py  tts_client.py
backend/app/memory/: __init__.py  conversation_memory.py
backend/app/routes/: __init__.py  ai_routes.py  system_routes.py
backend/app/services/: __init__.py  audio_manager.py
backend/data/chroma/: chroma.sqlite3
backend/local_mcp/: test_server.py
frontend/: README.md  drizzle.config.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  test-backend.js  test-db.js  tsconfig.json
frontend/.next/: app-build-manifest.json  trace
frontend/app/: globals.css  layout.tsx
frontend/components/: app-sidebar.tsx  artifact.tsx  chat.tsx  data-stream-handler.tsx  greeting.tsx  message.tsx  messages.tsx  multimodal-input.tsx  sheet-editor.tsx  sidebar-history-item.tsx  sidebar-history.tsx  (+2 more)
(+879 files in other folders)
