[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-community>=0.3.27",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.6.4",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.3.7",
    "langchain-text-splitters",
    "python-dotenv>=1.2.1",
    "aiosqlite>=0.21.0",
    "faiss-cpu>=1.11.0",
    "pymupdf>=1.25.0",
    "ddgs>=8.3.1",
]
