[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-community>=0.3.27",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.6.4",
    "langgraph-checkpoint-postgres>=2.1.1",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.3.7",
    "langchain-text-splitters",
    "python-dotenv>=1.2.1",
    "psycopg[binary]>=3.2.0",
    "asyncpg>=0.29.0",
    "langchain-postgres>=0.0.15",
    "pgvector>=0.3.2",
    "pymupdf>=1.25.0",
    "ddgs>=8.3.1",
]
